--- a/client/src/assets/css/bootstrap.css
+++ b/client/src/assets/css/bootstrap.css
@@ -3646,8 +3646,8 @@ textarea.form-control-lg {
   display: block;
   padding: var(--bs-nav-link-padding-y) var(--bs-nav-link-padding-x);
   font-size: var(--bs-nav-link-font-size);
-  font-weight: var(--bs-nav-link-font-weight);
-  color: var(--bs-nav-link-color);
+  font-weight: bolder;
+  color: #b99a45;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3657,7 +3657,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: var(--bs-nav-link-hover-color);
+  color: #b99a45;
 }
 .nav-link.disabled {
   color: var(--bs-nav-link-disabled-color);
