work on update profile ,listing and profile detail

--- a/client/src/component/dialog/planDialog.js/index.css
+++ b/client/src/component/dialog/planDialog.js/index.css
@@ -4,6 +4,7 @@
   .single-price {
     padding-bottom: 25px;
     background: #fff;
+    min-height: 100vh;
     text-align: center;
     overflow: hidden;
     position: relative;
