--- a/client/src/assets/css/bootstrap.css
+++ b/client/src/assets/css/bootstrap.css
@@ -3835,9 +3835,9 @@ textarea.form-control-lg {
 }
 
 .navbar-collapse {
-  flex-basis: 100%;
+  /* flex-basis: 100%; */
   flex-grow: 1;
-  align-items: center;
+  align-items: left;
 }
 
 .navbar-toggler {
